Implement LR Parser