@@ -5,11 +5,8 @@ import com.swe204.lrparser.model.GrammarRule;
 import com.swe204.lrparser.util.ResourceUtil;
 
 import java.io.FileReader;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
 import java.io.BufferedReader;
-import java.util.Map;
 
 
 public class TableLoaderService {
@@ -33,11 +30,9 @@ public class TableLoaderService {
 
     public Map<Integer, Map<String, Action>> loadActionTable() {
         Map<Integer, Map<String, Action>> actionTable = new HashMap<>();
-
         try (BufferedReader br = ResourceUtil.getBufferedReader("ActionTable.txt")) {
-            String header = br.readLine();
-            String[] tokens = header.trim().split("\\s+");
-            List<String> columns = new ArrayList<>(List.of(tokens).subList(1, tokens.length));
+            String[] headers = br.readLine().trim().split("\\s+");
+            List<String> terminals = Arrays.asList(headers).subList(1, headers.length);
 
             String line;
             while ((line = br.readLine()) != null) {
@@ -45,24 +40,21 @@ public class TableLoaderService {
                 int state = Integer.parseInt(parts[0]);
                 Map<String, Action> row = new HashMap<>();
                 for (int i = 1; i < parts.length; i++) {
-                    row.put(columns.get(i - 1), Action.fromString(parts[i]));
+                    row.put(terminals.get(i - 1), Action.fromString(parts[i]));
                 }
                 actionTable.put(state, row);
             }
         } catch (Exception e) {
             System.err.println("Failed to load action table: " + e.getMessage());
         }
-
         return actionTable;
     }
 
     public Map<Integer, Map<String, Integer>> loadGotoTable() {
         Map<Integer, Map<String, Integer>> gotoTable = new HashMap<>();
-
         try (BufferedReader br = ResourceUtil.getBufferedReader("GotoTable.txt")) {
-            String header = br.readLine();
-            String[] tokens = header.trim().split("\\s+");
-            List<String> columns = new ArrayList<>(List.of(tokens).subList(1, tokens.length));
+            String[] headers = br.readLine().trim().split("\\s+");
+            List<String> nonTerminals = Arrays.asList(headers).subList(1, headers.length);
 
             String line;
             while ((line = br.readLine()) != null) {
@@ -70,9 +62,8 @@ public class TableLoaderService {
                 int state = Integer.parseInt(parts[0]);
                 Map<String, Integer> row = new HashMap<>();
                 for (int i = 1; i < parts.length; i++) {
-                    String cell = parts[i];
-                    if (!cell.equals("-")) {
-                        row.put(columns.get(i - 1), Integer.parseInt(cell));
+                    if (!parts[i].equals("-")) {
+                        row.put(nonTerminals.get(i - 1), Integer.parseInt(parts[i]));
                     }
                 }
                 gotoTable.put(state, row);
@@ -80,7 +71,6 @@ public class TableLoaderService {
         } catch (Exception e) {
             System.err.println("Failed to load goto table: " + e.getMessage());
         }
-
         return gotoTable;
     }
 }
